Fixed tags issues on safari

--- a/src/views/components/tags-suggestions/tags-suggestions.scss
+++ b/src/views/components/tags-suggestions/tags-suggestions.scss
@@ -7,7 +7,7 @@
 
   button {
     border: none;
-    margin-bottom: 0.9em;
+    margin-bottom: 0.4em;
     padding: 2px;
   }
 
@@ -18,6 +18,7 @@
   li {
     margin: 0;
     font-size: 13px;
+    line-height: 2em;
     font-weight: 400;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
